<resources>
    <string name="app_name">Hiragana Now</string>

    <!-- Options menu items -->
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="title_menu">@string/app_name</string>
    <string name="title_game_hiragana">Hiragana</string>
    <string name="title_game_katakana">Katakana</string>
    <string name="title_info">Info</string>

    <!-- Buttons -->
    <string name="button_hiragana">Hiragana</string>
    <string name="button_katakana">Katakana</string>
    <string name="button_info">More info</string>
    <string name="button_pass">Pass</string>

    <!-- Inputs -->
    <string name="hint_game_input">…</string>

    <!-- Text -->
    <string name="text_hiragana">ひ\nら\nが\nな</string>
    <string name="text_katakana">カ\nタ\nカ\nナ</string>
    <string name="text_free_pass">★★★ Free Pass ★★★</string>
    <string name="text_level_up">★★★★★\nLevel Up\n★★★★★</string>
    <string name="text_final_level">★★★★★\nFinal Test\n★★★★★</string>
    <string name="text_win_game">★★★★★\nYou Did It!\n★★★★★</string>

    <!-- Messages -->
    <string name="message_empty_input">Type an answer or press the "pass" button</string>
    <string name="message_invalid_kana">That is not the romaji for any kana</string>
    <string name="message_game_over">Game over - try again!</string>
    <string name="message_out_of_passes">You have no passes left!</string>
</resources>