<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainMenu">

    <fragment
        android:id="@+id/MainMenu"
        android:name="com.hiraganaNow.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu">

        <action
            android:id="@+id/nav_to_game_hiragana"
            app:destination="@id/HiraganaMode" />

        <action
            android:id="@+id/nav_to_game_katakana"
            app:destination="@id/KatakanaMode" />
    </fragment>
    <fragment
        android:id="@+id/HiraganaMode"
        android:name="com.hiraganaNow.GameFragment"
        android:label="@string/title_game_hiragana"
        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/nav_to_main_menu"
            app:destination="@id/MainMenu" />
    </fragment>
    <fragment
        android:id="@+id/KatakanaMode"
        android:name="com.hiraganaNow.GameFragment"
        android:label="@string/title_game_katakana"
        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/nav_to_main_menu"
            app:destination="@id/MainMenu" />
    </fragment>
</navigation>