<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.HiraganaNow.FragmentLayout"
    tools:context=".GameFragment">

    <TextView
        style="@style/Text.Game.BigKana"
        android:id="@+id/text_kana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:text="が" />

    <TextView
        style="@style/Text.Game"
        android:id="@+id/text_lives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_kana"
        app:layout_constraintEnd_toStartOf="@+id/text_kana"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_kana"
        tools:text="♥\n♥\n♥\n❌\n❌" />

    <TextView
        style="@style/Text.Game"
        android:id="@+id/text_passes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_kana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/text_kana"
        app:layout_constraintTop_toTopOf="@+id/text_kana"
        tools:text="❓\n❓\n❌" />

    <Button
        style="@style/Button"
        android:id="@+id/button_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_pass"
        app:layout_constraintBottom_toTopOf="@+id/text_kana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        style="@style/Text.Game"
        android:id="@+id/text_free_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_free_pass"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_pass"
        tools:visibility="visible" />

    <EditText
        style="@style/Text.Game.Input"
        android:id="@+id/kanaInput"
        android:hint="@string/hint_game_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="3"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_kana"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>